# Astrbot_Community_Plugins

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json
.github/workflows/: ci.yml  codeql.yml
apps/api/: .env.docker.example  .env.example  pyproject.toml
apps/api/app/: __init__.py  auth.py  config.py  env_file.py  main.py  runtime_config.py  schemas.py  store.py
apps/api/tests/: conftest.py  test_market.py
apps/market-web/: .env.example  index.html  package-lock.json  package.json  vite.config.js
apps/market-web/src/: App.vue
apps/market-web/src/assets/: theme.css
apps/market-web/src/components/: AppFooter.vue  AppHeader.vue  AppPagination.vue  HelpButton.vue  IrisMask.vue  PluginCard.vue  PluginComment.vue  PluginDetails.vue  SearchToolbar.vue  ThemeModeButton.vue
apps/market-web/src/config/: darkTheme.js
apps/market-web/src/router/: index.js
apps/market-web/src/stores/: plugins.js
apps/market-web/src/views/: AdminLogin.vue  AdminPlugins.vue  Home.vue  NotFound.vue  Notifications.vue  PersonalSettings.vue  Settings.vue  Setup.vue  SubmitPlugin.vue
deploy/systemd/: astrbot-community-plugins.env.example  astrbot-community-plugins.service
docs/: architecture.md  security.md
docs/api/: openapi.yaml
