[project]
name = "astrbot-community-plugins-api"
version = "0.1.0"
description = "FastAPI backend for the AstrBot community plugin market."
requires-python = ">=3.11"
dependencies = [
  "asyncpg>=0.30.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "redis>=5.2.0",
  "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
